# project-template-python

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  example.env  pyproject.toml
app/: api.py  config.py  dependencies.py  utils.py
app/routers/: users.py
notebooks/: Getting Started.ipynb
tests/: test_users.py
