[tool.poetry]
name = "todo-list-app"
version = "0.1.0"
description = "Small pet-project to keep my fingers busy and play around with Python"
authors = ["Marius Kempf <mrskmpf@gmx.net>"]
repository = "https://github.com/mariuskempf/todo-list-app"
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"

[tool.poetry.group.dev.dependencies]
pre-commit = "4.2.0"
pylint = "3.3.7"
pytest = "8.1.1"
shellcheck-py = "^0.10.0.1"

[tool.poetry.group.dev]
optional = true

[tool.black]
line-length = 120
target-version = ["py310", "py311"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
