[tool.poetry]
name = "name-of-application"
version = "0.1.0"
description = "Brief project description."
authors = ["Name Surname <email-address>"]
repository = "https://github.com/mariuskempf/todo-list-app"
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
pydantic-settings = "^2.10.1"
fastapi = "^0.116.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "4.2.0"
pylint = "3.3.7"
pytest = "8.1.1"
shellcheck-py = "^0.10.0.1"
ipython = "^8.37.0"
ipykernel = "^6.30.0"
black = {extras = ["jupyter"], version = "^25.1.0"}

[tool.poetry.group.dev]
optional = true

[tool.black]
line-length = 120
target-version = ["py310", "py311"]

[tool.isort]
profile = "black"
src_paths = ["app"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
